heatmap_gen_separate_classes/nohup.out
  File "1_cp_heatmaps_all.sh", line 3
    source ../conf/variables.sh
            ^
SyntaxError: invalid syntax
